baremetal-rpi/fluxcd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: flux-system
spec:
  rules:
    - host: flux.192.168.0.132.nip.io
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - flux.192.168.0.132.nip.io
