baremetal-rpi/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: grafana-exposed
  namespace: monitoring
spec:
  rules:
    - host: grafana.k3s-kluster.com
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana.k3s-kluster.com
      secretName: grafana-tls
---
